:lipstick: Fix z-index of the navigation header

--- a/css/main.scss
+++ b/css/main.scss
@@ -23,7 +23,7 @@ header.navbar {
   position: fixed;
   width: 100%;
   background-color: white;
-  z-index: 1;
+  z-index: 2;
 }
 
 #content {
